<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">"Can't connect to camera."</string>
    <string name="camera_label">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="gallery_camera_bucket_name">Camera pictures</string>
    <string name="gallery_camera_videos_bucket_name">Camera videos</string>
    <string name="wait">Please wait...</string>
    <string name="not_enough_space">Your SD card is full.</string>
    <string name="preparing_sd">Preparing SD card...</string>
    <string name="spaceIsLow_content">Your SD card is running out of space. Change the quality setting or delete items from Gallery.</string>
    <string name="access_sd_fail">Failed to access SD card.</string>
    <string name="image_file_name_format">"'IMG'_yyyyMMdd_HHmmss"</string>
    <string name="video_file_name_format">"'VID'_yyyyMMdd_HHmmss"</string>
    <string name="video_reach_size_limit">Size limit reached.</string>
    <string name="burst_reach_count_limit">Burst count limit reached.</string>
    <string name="anti_shake_time_expired">Time expired, take picture immediately.</string>
    <string name="removed">Removed</string>
    <string name="details_ok">OK</string>
    <string name="switch_to_camera_lable">Switch to camera</string>
    <string name="switch_to_video_lable">Switch to video</string>
    <string name="review_play">Play</string>
    <string name="review_cancel">Cancel</string>
    <string name="review_ok">OK</string>
    <string name="review_retake">Retake</string>
    <string name="restore_title">Restore defaults</string>
    <string name="confirm_restore_message">Camera settings will be restored to defaults.</string>
    <string name="send_method">Send to</string>
    <string name="switch_to_camera">Camera</string>
    <string name="switch_to_video">Video</string>
    <string name="anti_shake">Anti-shake</string>
    <string name="burst">Burst</string>
    <string name="color_effect">Color effect</string>
    <string name="delay_snap">Delay</string>
    <string name="screen_shutter">Screen shutter</string>
    <string name="silence">Sound</string>
    <string name="disable_silence">Sounds</string>
    <string name="setting">Settings</string>
    <string name="camera_settings">Camera Settings</string>
    <string name="pref_camera_picture_setting">Picture settings</string>
    <string name="pref_camera_picturesize">Picture size</string>
    <string name="pref_picturesize_M">MB</string>
    <string name="pref_picturesize_10K">0KB</string>
    <string name="pref_picturesize_fullscreen">Full screen</string>
    <string name="pref_camera_jpegquality">Picture quality</string>
    <string name="pref_camera_jpegquality_superfine">Super fine</string>
    <string name="pref_camera_jpegquality_fine">Fine</string>
    <string name="pref_camera_jpegquality_normal">Normal</string>
    <string name="pref_camera_on_off_setting">On/Off settings</string>
    <string name="pref_camera_recordlocation">Save location</string>
    <string name="pref_camera_recordlocation_on">On</string>
    <string name="pref_camera_recordlocation_off">Off</string>
    <string name="pref_camera_autofocus">Auto focus</string>
    <string name="pref_camera_playback">Play back</string>
    <string name="pref_camera_referenceline">Composition grid</string>
    <string name="pref_camera_referenceline_none">None</string>
    <string name="pref_camera_referenceline_magicsquare">3x3</string>
    <string name="pref_camera_referenceline_goldenratio">Frame</string>
    <string name="pref_camera_scenedetect">Scene detect</string>
    <string name="pref_camera_lensshade">Lens shade</string>
    <string name="pref_camera_skintone_enhancement">Skin tone enhancement</string>
    <string name="pref_camera_other_setting">Other settings</string>
    <string name="pref_camera_focusmode">Focus mode</string>
    <string name="pref_camera_focusmode_auto">Auto</string>
    <string name="pref_camera_focusmode_normal">Normal</string>
    <string name="pref_camera_focusmode_infinity">Infinity</string>
    <string name="pref_camera_focusmode_macro">Macro</string>
    <string name="pref_camera_focusmode_fixed">Fixed</string>
    <string name="pref_camera_focusmode_edof">EDOF</string>
    <string name="pref_camera_focusmode_continuous_video">Continuous video</string>
    <string name="flash_auto">Auto</string>
    <string name="flash_on">On</string>
    <string name="flash_off">Off</string>
    <string name="pref_camera_whitebalance">White balance</string>
    <string name="pref_camera_whitebalance_auto">Auto</string>
    <string name="pref_camera_whitebalance_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_cloudy">Cloudy</string>
    <string name="pref_camera_sharpness">Sharpness</string>
    <string name="pref_camera_contrast">Contrast</string>
    <string name="pref_camera_saturation">Saturation</string>
    <string name="pref_camera_coloreffect_none">Normal</string>
    <string name="pref_camera_coloreffect_mono">Mono</string>
    <string name="pref_camera_coloreffect_sepia">Sepia</string>
    <string name="pref_camera_coloreffect_negative">Negative</string>
    <string name="pref_camera_coloreffect_solarize">Solarize</string>
    <string name="pref_camera_coloreffect_posterize">Posterize</string>
    <string name="pref_camera_coloreffect_aqua">Aqua</string>
    <string name="pref_camera_coloreffect_pastel">Pastel</string>
    <string name="pref_camera_coloreffect_mosaic">Mosaic</string>
    <string name="pref_camera_coloreffect_redtint">Red tint</string>
    <string name="pref_camera_coloreffect_bluetint">Blue tint</string>
    <string name="pref_camera_coloreffect_greentint">Green tint</string>
    <string name="pref_camera_scenemode">Scene mode</string>
    <string name="pref_camera_scenemode_auto">Auto</string>
    <string name="pref_camera_scenemode_action">Action</string>
    <string name="pref_camera_scenemode_portrait">Portrait</string>
    <string name="pref_camera_scenemode_landscape">Landscape</string>
    <string name="pref_camera_scenemode_night">Night</string>
    <string name="pref_camera_scenemode_night_portrait">Night portrait</string>
    <string name="pref_camera_scenemode_theatre">Theatre</string>
    <string name="pref_camera_scenemode_beach">Beach</string>
    <string name="pref_camera_scenemode_snow">Snow</string>
    <string name="pref_camera_scenemode_sunset">Sunset</string>
    <string name="pref_camera_scenemode_steadyphoto">Steady photo</string>
    <string name="pref_camera_scenemode_fireworks">Fireworks</string>
    <string name="pref_camera_scenemode_sports">Sports</string>
    <string name="pref_camera_scenemode_party">Party</string>
    <string name="pref_camera_scenemode_candlelight">Candle light</string>
    <string name="pref_camera_scenemode_backlight">Backlight</string>
    <string name="pref_camera_scenemode_flowers">Flowers</string>
    <string name="pref_camera_antibanding">Anti-banding</string>
    <string name="pref_camera_antibanding_auto">Auto</string>
    <string name="pref_camera_antibanding_50hz">50 Hz</string>
    <string name="pref_camera_antibanding_60hz">60 Hz</string>
    <string name="pref_camera_antibanding_off">Off</string>
    <string name="pref_camera_iso">ISO</string>
    <string name="pref_camera_iso_auto">Auto</string>
    <string name="pref_camera_iso_deblur">Deblur</string>
    <string name="pref_camera_iso_100">ISO 100</string>
    <string name="pref_camera_iso_200">ISO 200</string>
    <string name="pref_camera_iso_400">ISO 400</string>
    <string name="pref_camera_iso_800">ISO 800</string>
    <string name="pref_camera_iso_1250">ISO 1250</string>
    <string name="pref_camera_iso_1600">ISO 1600</string>
    <string name="pref_camera_autoexposure">Metering mode</string>
    <string name="pref_camera_autoexposure_average">Frame average</string>
    <string name="pref_camera_autoexposure_center">Center weighted</string>
    <string name="pref_camera_autoexposure_spot">Spot metering</string>
    <string name="video_settings">Video Settings</string>
    <string name="pref_video_quality">Video Quality</string>
    <string name="pref_video_quality_hd">HD%s (2h)</string>
    <string name="pref_video_quality_high">High (2h)</string>
    <string name="pref_video_quality_low">Low (2h)</string>
    <string name="pref_video_quality_mms">MMS (Low, 30s)</string>
    <string name="pref_video_continuous_focus">Continuous focus</string>
    <string name="tag_coloreffect">COLOR_EFFECT_INDEX</string>
</resources>
