<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/setting_frame" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/setting_view" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:id="@id/setting_view_shadow" android:background="@drawable/setting_panel_shadow" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="10.0px" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ScreenView android:id="@id/color_effect" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/setting_panel" android:background="@drawable/setting_panel_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <com.miui.camera.ui.RotateTextView android:id="@id/switch_to_video_icon" android:text="@string/switch_to_video" android:drawableTop="@drawable/setting_ic_video" android:onClick="onClickSwitchToVideoIcon" style="@style/SettingPanelItem" />
                <com.miui.camera.ui.RotateTextView android:id="@id/anti_shake_icon" android:text="@string/anti_shake" android:drawableTop="@drawable/setting_ic_anti_shake" android:onClick="onClickAntiShakeIcon" style="@style/SettingPanelItem" />
                <com.miui.camera.ui.RotateTextView android:id="@id/burst_icon" android:text="@string/burst" android:drawableTop="@drawable/setting_ic_burst" android:onClick="onClickBurstIcon" style="@style/SettingPanelItem" />
                <com.miui.camera.ui.RotateTextView android:id="@id/color_effect_icon" android:text="@string/color_effect" android:drawableTop="@drawable/setting_ic_color_effect" android:onClick="onClickColorEffectIcon" style="@style/SettingPanelItem" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <com.miui.camera.ui.RotateTextView android:id="@id/delay_snap_icon" android:text="@string/delay_snap" android:drawableTop="@drawable/setting_ic_delay_snap" android:onClick="onClickDelaySnapIcon" style="@style/SettingPanelItem" />
                <com.miui.camera.ui.RotateTextView android:id="@id/screen_shutter_icon" android:text="@string/screen_shutter" android:drawableTop="@drawable/setting_ic_screen_shutter" android:onClick="onClickScreenShutterIcon" style="@style/SettingPanelItem" />
                <com.miui.camera.ui.RotateTextView android:id="@id/sound_icon" android:text="@string/silence" android:drawableTop="@drawable/setting_ic_sound_on" android:onClick="onClickSoundIcon" style="@style/SettingPanelItem" />
                <com.miui.camera.ui.RotateTextView android:id="@id/setting_icon" android:text="@string/setting" android:drawableTop="@drawable/setting_ic_setting" android:onClick="onClickSettingIcon" style="@style/SettingPanelItem" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
