<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/control_bar_shadow" android:background="@drawable/bar_shadow" android:layout_width="fill_parent" android:layout_height="9.0px" />
    <FrameLayout android:id="@id/control_bar" android:background="@drawable/ctl_bg_85_trans" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_gravity="left|center" android:id="@id/btn_done" android:background="@drawable/ic_bg_bottom_white" android:visibility="invisible" android:layout_marginLeft="10.0dip" android:text="@string/review_ok" style="@style/ReviewControlTextBlack" />
        <LinearLayout android:layout_gravity="right|center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@id/btn_play" android:background="@drawable/ic_bg_bottom_black" android:visibility="invisible" android:layout_marginRight="10.0dip" android:text="@string/review_play" style="@style/ReviewControlText" />
            <TextView android:id="@id/btn_retake" android:background="@drawable/ic_bg_bottom_black" android:visibility="invisible" android:layout_marginRight="10.0dip" android:text="@string/review_retake" style="@style/ReviewControlText" />
            <TextView android:id="@id/btn_cancel" android:background="@drawable/ic_bg_bottom_black" android:layout_marginRight="10.0dip" android:text="@string/review_cancel" style="@style/ReviewControlText" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
